<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1000:625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/speed_meter" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="SPEED CALCULATOR"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/distance_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/distance"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/time_edittext"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/time_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/clear_button"
        app:layout_constraintEnd_toEndOf="@+id/distance_edittext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/distance_edittext"
        app:layout_constraintTop_toBottomOf="@+id/distance_edittext" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/clear"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/cal_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/time_edittext"
        app:layout_constraintTop_toBottomOf="@+id/time_edittext" />

    <Button
        android:id="@+id/cal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/clear_button"
        app:layout_constraintEnd_toEndOf="@+id/time_edittext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear_button"
        app:layout_constraintTop_toTopOf="@+id/clear_button" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFDFD"
        android:text="@string/average"
        android:textColor="#FF0000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/average_textview"
        app:layout_constraintEnd_toEndOf="@+id/cal_button"
        app:layout_constraintStart_toStartOf="@+id/clear_button"
        app:layout_constraintTop_toBottomOf="@+id/clear_button" />

    <TextView
        android:id="@+id/average_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="แสดงความเร็ว" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/red_cow" />

</androidx.constraintlayout.widget.ConstraintLayout>